tekton/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: privileged  # restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged  # restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: privileged  # restricted
    pod-security.kubernetes.io/audit-version: latest
    kubernetes.io/metadata.name: homelab
  name: homelab
